cs352/semantics/Semantics/SimpleScript/y.output
Grammar

    0 $accept: program $end

    1 program: L

    2 L: L statement '\n'
    3  | /* empty */

    4 statement: expression
    5          | ID '=' expression

    6 expression: INTEGER
    7           | ID
    8           | expression '+' expression
    9           | expression '-' expression
   10           | expression '*' expression
   11           | expression '/' expression
   12           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2
'(' (40) 12
')' (41) 12
'*' (42) 10
'+' (43) 8
'-' (45) 9
'/' (47) 11
'=' (61) 5
error (256)
INTEGER (258) 6
ID (259) 5 7


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program (14)
    on left: 1, on right: 0
L (15)
    on left: 2 3, on right: 1 2
statement (16)
    on left: 4 5, on right: 2
expression (17)
    on left: 6 7 8 9 10 11 12, on right: 4 5 8 9 10 11 12


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (L)

    program  go to state 1
    L        go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: L .
    2 L: L . statement '\n'

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 5
    '('      shift, and go to state 6

    $default  reduce using rule 1 (program)

    statement   go to state 7
    expression  go to state 8


state 3

    0 $accept: program $end .

    $default  accept


state 4

    6 expression: INTEGER .

    $default  reduce using rule 6 (expression)


state 5

    5 statement: ID . '=' expression
    7 expression: ID .

    '='  shift, and go to state 9

    $default  reduce using rule 7 (expression)


state 6

   12 expression: '(' . expression ')'

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 11


state 7

    2 L: L statement . '\n'

    '\n'  shift, and go to state 12


state 8

    4 statement: expression .
    8 expression: expression . '+' expression
    9           | expression . '-' expression
   10           | expression . '*' expression
   11           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 4 (statement)


state 9

    5 statement: ID '=' . expression

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 17


state 10

    7 expression: ID .

    $default  reduce using rule 7 (expression)


state 11

    8 expression: expression . '+' expression
    9           | expression . '-' expression
   10           | expression . '*' expression
   11           | expression . '/' expression
   12           | '(' expression . ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 18


state 12

    2 L: L statement '\n' .

    $default  reduce using rule 2 (L)


state 13

    8 expression: expression '+' . expression

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 19


state 14

    9 expression: expression '-' . expression

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 20


state 15

   10 expression: expression '*' . expression

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 21


state 16

   11 expression: expression '/' . expression

    INTEGER  shift, and go to state 4
    ID       shift, and go to state 10
    '('      shift, and go to state 6

    expression  go to state 22


state 17

    5 statement: ID '=' expression .
    8 expression: expression . '+' expression
    9           | expression . '-' expression
   10           | expression . '*' expression
   11           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 5 (statement)


state 18

   12 expression: '(' expression ')' .

    $default  reduce using rule 12 (expression)


state 19

    8 expression: expression . '+' expression
    8           | expression '+' expression .
    9           | expression . '-' expression
   10           | expression . '*' expression
   11           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 8 (expression)


state 20

    8 expression: expression . '+' expression
    9           | expression . '-' expression
    9           | expression '-' expression .
   10           | expression . '*' expression
   11           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 9 (expression)


state 21

    8 expression: expression . '+' expression
    9           | expression . '-' expression
   10           | expression . '*' expression
   10           | expression '*' expression .
   11           | expression . '/' expression

    $default  reduce using rule 10 (expression)


state 22

    8 expression: expression . '+' expression
    9           | expression . '-' expression
   10           | expression . '*' expression
   11           | expression . '/' expression
   11           | expression '/' expression .

    $default  reduce using rule 11 (expression)
